--- a/ViewCoreWPF/App.xaml
+++ b/ViewCoreWPF/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:ViewCoreWPF"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ModernButtonTheme.xaml"></ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
