--- a/ViewCoreWPF/MainWindow.xaml
+++ b/ViewCoreWPF/MainWindow.xaml
@@ -10,7 +10,9 @@
         AllowsTransparency="True"
         Background="Transparent"
         WindowStyle="None"
-        ResizeMode="NoResize">
+        ResizeMode="NoResize"
+        MouseDown="Window_MouseDown"
+        WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -27,17 +29,14 @@
         </Border>
 
         <StackPanel VerticalAlignment="Center">
-            <Image Source="Recursos\fml_ingenieria_logo_194x89.jpg" Width="80"/>
-            <TextBlock Text="Login"
-                       FontWeight="Light"
-                       FontFamily="helvetica"
-                       FontSize="22"
-                       Foreground="DarkBlue"
-                       HorizontalAlignment="Center"/>
+            <Image Source="Recursos/fml_ingenieria_logo_194x89.jpg" Width="138" Height="63"/>
+           
         </StackPanel>
 
-        <StackPanel Grid.Row="1" Orientation="Horizontal">
-            <TextBox FontFamily="helvetica"
+        <StackPanel Grid.Row="1" >
+            <StackPanel Orientation="Horizontal">
+                <TextBox FontFamily="helvetica"
+                     Name="txtUsuario"
                      FontWeight="Light"
                      Text="Usuario"
                      FontSize="20"
@@ -48,11 +47,47 @@
                      Width="235"
                      HorizontalContentAlignment="Left"
                      Opacity="0.5"
-                     Height="25"/>
-            <iconPacks:PackIconMaterial Kind="Account"
+                     Height="25"
+                         Margin="63 0 0 0" GotFocus="txtUsuario_GotFocus"/>
+                <iconPacks:PackIconMaterial Kind="Account"
                                  VerticalAlignment="Center"
                                  HorizontalAlignment="Center" 
                                         Foreground="White"/>
+            </StackPanel>
+            <Border Width="250"
+                Height="2"
+                Background="White"
+                Opacity="0.5"/>
+
+            <StackPanel Orientation="Horizontal" Margin="0,20,0,0" GotFocus="StackPanel_GotFocus">
+                <PasswordBox FontFamily="helvetica"
+                     Name="txtPassword"
+                     FontWeight="Light"
+                     Password="Password"
+                     FontSize="20"
+                     HorizontalAlignment="Center"
+                     Foreground="DarkBlue"
+                     Background="Transparent"
+                     BorderThickness="0"
+                     Width="235"
+                     HorizontalContentAlignment="Left"
+                     Opacity="0.5"
+                     Height="25"
+                         Margin="63 0 0 0"/>
+                <iconPacks:PackIconMaterial Kind="FormTextboxPassword"
+                                 VerticalAlignment="Center"
+                                 HorizontalAlignment="Center" 
+                                        Foreground="White"/>
+            </StackPanel>
+            <Border Width="250"
+                Height="2"
+                Background="White"
+                Opacity="0.5"/>
+
+            <StackPanel Orientation="Horizontal" Margin="0 30 0 0">
+                <Button Width="100" Height="40" Content="ENTRAR" Margin="75 0 15 0"></Button>
+                <Button Width="100" Height="40" Content="CANCELAR"></Button>
+            </StackPanel>
         </StackPanel>
     </Grid>
 </Window>
