TextBlock Prueba Gitub

--- a/MenuPrincipal/MainWindow.xaml
+++ b/MenuPrincipal/MainWindow.xaml
@@ -37,5 +37,8 @@
         <StackPanel>
             <TextBlock>Prueba GIT</TextBlock>
         </StackPanel>
+        <StackPanel>
+            <TextBlock>Prueba GIT</TextBlock>
+        </StackPanel>
     </Grid>
 </Window>
