Añadir cambios a la master

--- a/MenuPrincipal/MainWindow.xaml
+++ b/MenuPrincipal/MainWindow.xaml
@@ -34,5 +34,8 @@
                 <StackPanel x:Name="Menu" Margin="8"/>
             </ScrollViewer>
         </Grid>
+        <DockPanel>
+            <TextBox>Prueba GIT</TextBox>
+        </DockPanel>
     </Grid>
 </Window>
