Se añade el texbox Lorenzo

--- a/MenuPrincipal/MainWindow.xaml
+++ b/MenuPrincipal/MainWindow.xaml
@@ -35,7 +35,7 @@
             </ScrollViewer>
         </Grid>
         <DockPanel>
-            <TextBox>Prueba GIT</TextBox>
+            <TextBox>Prueba GIT Lorenzo</TextBox>
         </DockPanel>
     </Grid>
 </Window>
