--- a/MenuPrincipal/MainWindow.xaml
+++ b/MenuPrincipal/MainWindow.xaml
@@ -34,6 +34,7 @@
                 <StackPanel x:Name="Menu" Margin="8"/>
             </ScrollViewer>
             <Label>Papapapa Prueba Alex</Label>
+            <Label>Pipipi Prueba Alex</Label>
         </Grid>
     </Grid>
 </Window>
